# 2020-PCS3216-9345853

./: .gitignore  README.org  pyproject.toml  pytest.ini  requirements.txt
data/: assembly.txt
relatorio/: relatorio.html  relatorio.org  relatorio.tex
relatorio/.auctex-auto/: relatorio.el
src/: __init__.py  assembler.py  cpu.py  loader.py  memory.py
src/data/: assembly.txt  fibonacci.asm  loader.asm  loader_assembly.txt  output.txt
tests/: hypothesis_test.py  test_cpu.py  test_loader.py  test_memory.py
